# gca

./: .gitignore  100_013_with_new_toolpaths.txt  CMakeLists.txt  Makefile  README.md  adjust_hack_test.ngc  crashing_part_100_013_op_2.NCF  crashing_part_100_013_op_4.NCF  displaced.mesh  dispmesh.ply  gca_depends.sh  meshfile.poly  mrrs_with_bounding_box_stock.csv  output_mesh.mesh  part_100_013_full.txt  part_1_part_1_op1.NCF  prl_json_feedrate.json  prl_programs_roughing_tool_mrrs_json.txt  rough_ops_ranked.txt  sol.gf  wjlin_safe_move_crashes.txt
examples/: AddCell.cpp  DataAnimationSubclass.cpp  TriangulateTerrainMap.cxx  analyze_gcodes.cpp  bmp_prog.cpp  camaster_test.cpp  check_bounds.cpp  check_contours.cpp  cut_rect.cpp  debug_test.cpp  engraving.cpp  extract_g1_paths.cpp  feature_decomp.cpp  gdiff.cpp  hello_world.cpp  hole_optimizer.cpp  json_mesh.cpp  json_plan.cpp  manufacture.cpp  misc.cpp  nef_test.cpp  parse_iges.cpp  pen_draw_lines.cpp  plate_cutter.cpp  print_dxf.cpp  print_knife_hacks.cpp  print_strap.cpp  retarget.cpp  scale_down_mesh.cpp  simple_deepen.cpp  simple_prog.cpp  stl_parse.cpp  surface_test.cpp  tool_simulator.cpp  tri_test.cpp  ublas.cpp  vtk_mass_test.cpp  z_abstract.cpp
gcode_samples/: circle_with_fillet_side_3_op2.NCF  circle_with_fillet_side_3_op3.NCF  crashing_part_100_013_op_3.NCF  crashing_part_100_013_program.NCF  dice_1_op1.NCF  dice_1_op2.NCF  dice_1_op3.NCF  dice_1_op4.NCF  dice_1_op5.NCF  dice_1_op6.NCF  freeform_test.NCF  octagon_with_holes_short_full_op1.NCF  octagon_with_holes_short_full_op2.NCF  octagon_with_holes_short_full_op3.NCF  octagon_with_holes_short_full_op4.NCF  octagon_with_holes_short_full_op5.NCF  octagon_with_holes_short_full_op6.NCF  octagon_with_holes_short_full_op7.NCF  octagon_with_holes_short_full_op8.NCF  part_1_2_op1.NCF  part_1_2_op2.NCF
src/: abs_to_rel.h  arena_allocator.h  basic_states.h  bounds_checker.h  checker.h  context.h  cut.h  extra_instruction_checker.h  feed_changer.h  g0_filter.h  g0_move_checker.h  gprog.cpp  gprog.h  instr.cpp  instr.h  instr_bounds_checker.h  instr_checker.h  line.h  multi_checker.h  output.cpp  output.h  parser.cpp  parser.h  pass.cpp  pass.h  per_instr_checker.h  point.cpp  point.h  rel_to_abs.h  state.h  tiler.h
src/analysis/: extract_cuts.cpp  extract_cuts.h  fuzzing.cpp  fuzzing.h  gcode_to_cuts.cpp  gcode_to_cuts.h  machine_state.cpp  machine_state.h  position_table.cpp  position_table.h  profiler.cpp  profiler.h  propagate_settings.cpp  propagate_settings.h  unfold.cpp  unfold.h  utils.cpp  utils.h
src/backend/: align_blade.cpp  chamfer_operation.cpp  chamfer_operation.h  cut_params.cpp  cut_params.h  cut_to_gcode.cpp  cut_to_gcode.h  drilled_hole_operation.cpp  drilled_hole_operation.h  face_toolpaths.cpp  face_toolpaths.h  feedrate_optimization.cpp  feedrate_optimization.h  freeform_toolpaths.cpp  freeform_toolpaths.h  gcode_generation.cpp  operation.cpp  operation.h  operation_name.cpp  operation_name.h  output.cpp  shapes_to_gcode.cpp  shapes_to_toolpaths.cpp  slice_roughing_operation.cpp  slice_roughing_operation.h  timing.cpp  timing.h  tool.cpp  tool.h  toolpath.h  toolpath_generation.cpp  toolpath_generation.h
src/checkers/: block_rate_checker.cpp  block_rate_checker.h  bounds_checker.cpp  bounds_checker.h  extra_instruction_checker.h  forbidden_tool_checker.cpp  forbidden_tool_checker.h  g0_move_checker.h  unsafe_spindle_checker.cpp  unsafe_spindle_checker.h
src/core/: arena_allocator.cpp  arena_allocator.h  assign_instr.h  basic_states.h  callback.h  comment.h  context.cpp  context.h  f_instr.h  gprog.cpp  gprog.h  instr.cpp  instr.h  lexer.cpp  lexer.h  move_instr.h  parse_stream.cpp  parse_stream.h  parser.cpp  parser.h  pass.cpp  pass.h  state_names.h  value.cpp  value.h
src/diffs/: all.h
src/dxflib/: dl_dxf.h  dl_exception.h
src/feature_recognition/: chamfer_detection.cpp  chamfer_detection.h  feature_decomposition.cpp  feature_decomposition.h  fillet_detection.cpp  fillet_detection.h  freeform_surface_detection.cpp  freeform_surface_detection.h  prismatic_feature.cpp  prismatic_feature.h  prismatic_feature_utils.cpp  prismatic_feature_utils.h  vertical_wall.cpp  vertical_wall.h  visual_debug.cpp  visual_debug.h
src/gcode/: circular_arc.h  circular_helix_cut.h  cut.cpp  cut.h  gcode_program.h  lexer.cpp  lexer.h  linear_cut.cpp  linear_cut.h  machine.cpp  machine.h  parse_stream.cpp  parse_stream.h  safe_move.h  value.cpp  value.h  visual_debug.cpp  visual_debug.h
src/geometry/: arc.cpp  arc.h  b_spline.h  box.cpp  box.h  direction.h  extern_triangulate.cpp  extrusion.cpp  extrusion.h  homogeneous_transformation.cpp  homogeneous_transformation.h  line.cpp  line.h  matrix.cpp  matrix.h  mesh_operations.cpp  mesh_operations.h  offset.cpp  offset.h  parametric_curve.h  plane.cpp  plane.h  point.cpp  point.h  polygon.cpp  polygon.h  polygon_3.cpp  polygon_3.h  polyline.cpp  polyline.h  rigid_arrangement.h  ring.h  rotation.cpp  rotation.h  surface.cpp  surface.h  triangle.cpp  triangle.h  triangular_mesh.cpp  triangular_mesh.h  (+12 more)
src/process_planning/: axis_location.cpp  axis_location.h  direction_selection.cpp  direction_selection.h  feature_selection.cpp  (+17 more)
test/: analysis_tests.cpp  arc_tests.cpp  axis_3_tests.cpp  axis_field_tests.cpp  axis_location_tests.cpp  chamfer_detection_tests.cpp  checker_tests.cpp  circular_arc_tests.cpp  contour_planning_tests.cpp  cut_scheduling_tests.cpp  cut_tests.cpp  drill1.tap  drill_optimization_tests.cpp  dxf_to_gcode_tests.cpp  extrusion_tests.cpp  feature_recognition_tests.cpp  feature_selection_tests.cpp  fem_tests.cpp  fillet_detection_tests.cpp  fixture_analysis_tests.cpp  gcode_to_cuts_tests.cpp  jaw_cutout_tests.cpp  lexer_tests.cpp  line_tests.cpp  machinability_tests.cpp  machine_state_tests.cpp  main.cpp  manufacture.cpp  mesh_tests.cpp  mesh_to_gcode_tests.cpp  mill_simulator_tests.cpp  millability_tests.cpp  orientation_scheduling_tests.cpp  parse_tests.cpp  plane_tests.cpp  point_tests.cpp  polygon_tests.cpp  polyline_tests.cpp  position_table_tests.cpp  propagate_settings_tests.cpp  (+18 more)
(+260 files in other folders)
